--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -2,9 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Description>Open-source software tools to simulate the propagation and distribution of optical radiation in cells and tissues</Description>
+    <Description>The VTS (Virtual Tissue Simulator) is an open source library for .NET that was designed as a modular and scalable platform to provide an integrated suite of computational tools to define, solve, visualize, and analyze relevant forward and inverse radiative transport problems in Biomedical Optics.</Description>
     <Company>Virtual Photonics Technology Initiative</Company>
     <Copyright>Copyright © 2018 Laser Microbeam and Medical Program</Copyright>
+    <Version>3.0.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>David Cuccia; Carole Hayakawa; Lisa Malenfant; Janaka Ranasinghesagara; Jennifer Nguyen; Adam Gardner; Michele Martinelli</Authors>
+    <PackageId>VirtualPhotonics.Vts</PackageId>
+    <PackageLicenseUrl>https://github.com/VirtualPhotonics/VTS/blob/master/license.txt</PackageLicenseUrl>
+    <PackageTags>C# Monte-Carlo NURBS SDA Spectral-Data Reflectance Fluence Forward-Solutions Inverse-Solutions</PackageTags>
+    <PackageIconUrl>http://virtualphotonics.org/Themes/VP/Content/Images/logo.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/VirtualPhotonics/VTS/wiki</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/VirtualPhotonics/VTS</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -89,7 +99,7 @@
     <PackageReference Include="CommonServiceLocator" Version="2.0.3" />
     <PackageReference Include="csmpfit" Version="1.1.1" />
     <PackageReference Include="MathNet.Numerics" Version="4.4.0" />
-    <PackageReference Include="Meta.Numerics" Version="4.0.4-alpha" />
+    <PackageReference Include="Meta.Numerics" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="NLog" Version="4.5.2" />
